Fixed Background Responsive on mobilephones 2

--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,26 @@ body {
 
 }
 
+@media screen and (max-width : 500px) {
+.hero-bg {
+  position: absolute;
+  text-align: end;
+  top: 0;
+  right: 0;
+  height: 100%;
+  background-image: url('./Home/Background.jpg');
+  background-position: left -70vw top 20vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  transform: scale(1.75);
+
+  width: 100%;
+  height: 100%;
+
+  }
+}
+
 .hero-text {
   position: absolute;
   top: 60%;
